# OpenAudible-To-AudioBookShelf

./: .gitignore  Makefile  README.md  arguments.yaml  config.py  openaudible_to_ab.py  pyproject.toml  requirements.txt
modules/: audio_bookshelf.py  config.py  search_ai.py  utils.py
tests/: requirements.txt  test_audio_bookshelf.py  test_config.py  test_integration_real_data.py  test_libation.py  test_move_audio_book_files.py  test_openaudible.py  test_utils.py
